--- a/src/scss/pages/page-team.scss
+++ b/src/scss/pages/page-team.scss
@@ -1,3 +1,5 @@
 .team-page{
+  position: relative;
+	z-index: 1;
   background:url(../images/BG/team.png) no-repeat scroll center right transparent;
 }
